syntax = "proto2";

package examplecom;

message PrimitiveMessageV2 {
    required double my_double = 1;
    required float my_float = 2;
    required int32 my_int32 = 3;
    required int64 my_int64 = 4;
    required uint32 my_uint32 = 5;
    required uint64 my_uint64 = 6;
    required sint32 my_sint32 = 7;
    required sint64 my_sint64 = 8;
    required fixed32 my_fixed32 = 9;
    required fixed64 my_fixed64 = 10;
    required sfixed32 my_sfixed32 = 11;
    required sfixed64 my_sfixed64 = 12;
    required bool my_bool = 13;
    required string my_string = 14;
    required bytes my_bytes = 15;

    optional double opt_double = 16;
    optional float opt_float = 17;
    optional int32 opt_int32 = 18;
    optional int64 opt_int64 = 19;
    optional uint32 opt_uint32 = 20;
    optional uint64 opt_uint64 = 21;
    optional sint32 opt_sint32 = 22;
    optional sint64 opt_sint64 = 23;
    optional fixed32 opt_fixed32 = 24;
    optional fixed64 opt_fixed64 = 25;
    optional sfixed32 opt_sfixed32 = 26;
    optional sfixed64 opt_sfixed64 = 27;
    optional bool opt_bool = 28;
    optional string opt_string = 29;
    optional bytes opt_bytes = 30;

    optional int32 opt_NUMBER = 31;
}
